:tada: Create repository

--- a/Adventure_works.ipynb
+++ b/Adventure_works.ipynb
@@ -2,6 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Integrantes del grupo\n",
+    "\n",
+    "# Flavia Morena Valentina Pacheco Jaime\n",
+    "# Jozek Andrzej Hajduk Sánchez\n",
+    "# Jorge Andres Rangel Zapata"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
