:memo: Add documentation

--- a/Adventure_works.ipynb
+++ b/Adventure_works.ipynb
@@ -1,35 +1,26 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 244,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Integrantes del grupo\n",
+    "# Group members\n",
     "\n",
-    "# Flavia Morena Valentina Pacheco Jaime\n",
-    "# Jozek Andrzej Hajduk Sánchez\n",
-    "# Jorge Andres Rangel Zapata"
+    " - Flavia Morena Valentina Pacheco Jaime\n",
+    " - Jozek Andrzej Hajduk Sánchez\n",
+    " - Jorge Andres Rangel Zapata"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "import psycopg2\n",
-    "import pyarrow\n",
-    "import pandas as pd\n",
-    "import warnings\n",
-    "warnings.simplefilter(\"always\", category=PendingDeprecationWarning) \n",
-    "warnings.simplefilter(\"always\", category=DeprecationWarning) \n",
-    "from google.cloud import bigquery\n",
-    "from google.oauth2 import service_account"
+    "# Connection with POSTGRESQL"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,8 +28,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Getting the data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Table 1 Employees per area"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,31 +53,41 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 247,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "name     object\n",
-       "count     int64\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 247,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "table1['name']= table1['name'].astype(str)\n",
-    "table1.dtypes\n"
+    "_Data types table 1_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "table1['name']= table1['name'].astype(str)\n",
+    "table1.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "table1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Table 2 Units per subcategory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,124 +98,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>count</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>LL Road Rim</td>\n",
-       "      <td>37</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Mountain-100 Black, 38</td>\n",
-       "      <td>37</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>HL Road Frame - Black, 52</td>\n",
-       "      <td>37</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Flat Washer 6</td>\n",
-       "      <td>37</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Hex Nut 7</td>\n",
-       "      <td>37</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>499</th>\n",
-       "      <td>HL Road Frame - Red, 48</td>\n",
-       "      <td>37</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>500</th>\n",
-       "      <td>Road-350-W Yellow, 40</td>\n",
-       "      <td>37</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>501</th>\n",
-       "      <td>LL Touring Frame - Blue, 58</td>\n",
-       "      <td>37</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>502</th>\n",
-       "      <td>Men's Sports Shorts, M</td>\n",
-       "      <td>37</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>503</th>\n",
-       "      <td>Mountain-100 Silver, 38</td>\n",
-       "      <td>37</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>504 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                            name  count\n",
-       "0                    LL Road Rim     37\n",
-       "1         Mountain-100 Black, 38     37\n",
-       "2      HL Road Frame - Black, 52     37\n",
-       "3                  Flat Washer 6     37\n",
-       "4                      Hex Nut 7     37\n",
-       "..                           ...    ...\n",
-       "499      HL Road Frame - Red, 48     37\n",
-       "500        Road-350-W Yellow, 40     37\n",
-       "501  LL Touring Frame - Blue, 58     37\n",
-       "502       Men's Sports Shorts, M     37\n",
-       "503      Mountain-100 Silver, 38     37\n",
-       "\n",
-       "[504 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 249,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "table2"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Table 3 Units per product"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,124 +125,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>quantity</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Adjustable Race</td>\n",
-       "      <td>408</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Adjustable Race</td>\n",
-       "      <td>324</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Adjustable Race</td>\n",
-       "      <td>353</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Bearing Ball</td>\n",
-       "      <td>427</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Bearing Ball</td>\n",
-       "      <td>318</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1064</th>\n",
-       "      <td>Road-750 Black, 44</td>\n",
-       "      <td>30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1065</th>\n",
-       "      <td>Road-750 Black, 48</td>\n",
-       "      <td>99</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1066</th>\n",
-       "      <td>Road-750 Black, 48</td>\n",
-       "      <td>56</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1067</th>\n",
-       "      <td>Road-750 Black, 52</td>\n",
-       "      <td>78</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1068</th>\n",
-       "      <td>Road-750 Black, 52</td>\n",
-       "      <td>116</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1069 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                    name  quantity\n",
-       "0        Adjustable Race       408\n",
-       "1        Adjustable Race       324\n",
-       "2        Adjustable Race       353\n",
-       "3           Bearing Ball       427\n",
-       "4           Bearing Ball       318\n",
-       "...                  ...       ...\n",
-       "1064  Road-750 Black, 44        30\n",
-       "1065  Road-750 Black, 48        99\n",
-       "1066  Road-750 Black, 48        56\n",
-       "1067  Road-750 Black, 52        78\n",
-       "1068  Road-750 Black, 52       116\n",
-       "\n",
-       "[1069 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 251,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "table3"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Table 4 Employees per department"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,151 +152,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>count</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Quality Assurance</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Production Control</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Research and Development</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Sales</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Document Control</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Engineering</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Executive</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Purchasing</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Finance</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Facilities and Maintenance</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>Information Services</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>Human Resources</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>Tool Design</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>Shipping and Receiving</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>Production</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>Marketing</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                          name  count\n",
-       "0            Quality Assurance      1\n",
-       "1           Production Control      1\n",
-       "2     Research and Development      1\n",
-       "3                        Sales      1\n",
-       "4             Document Control      1\n",
-       "5                  Engineering      1\n",
-       "6                    Executive      2\n",
-       "7                   Purchasing      1\n",
-       "8                      Finance      1\n",
-       "9   Facilities and Maintenance      1\n",
-       "10        Information Services      1\n",
-       "11             Human Resources      1\n",
-       "12                 Tool Design      1\n",
-       "13      Shipping and Receiving      1\n",
-       "14                  Production      1\n",
-       "15                   Marketing      2"
-      ]
-     },
-     "execution_count": 253,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "table4"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Connection with Google Cloud"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Credentials"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,8 +195,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Table 1"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,20 +220,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<google.cloud.bigquery.job.load.LoadJob at 0x7f56c0eca9d0>"
-      ]
-     },
-     "execution_count": 257,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "job = client.load_table_from_dataframe(\n",
     "    table1, 'Workshop.empleados_area', job_config = job_config\n",
@@ -543,8 +231,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Table 2"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,20 +256,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<google.cloud.bigquery.job.load.LoadJob at 0x7f56c0b3f3d0>"
-      ]
-     },
-     "execution_count": 259,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "job = client.load_table_from_dataframe(\n",
     "    table2, 'Workshop.producto_por_categoria', job_config = job_config\n",
@@ -583,8 +267,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Table 3"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -601,20 +292,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<google.cloud.bigquery.job.load.LoadJob at 0x7f56c0b3f520>"
-      ]
-     },
-     "execution_count": 261,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "job = client.load_table_from_dataframe(\n",
     "    table3, 'Workshop.productos_bogodega', job_config = job_config\n",
@@ -623,8 +303,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Table 4"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -640,55 +327,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 263,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<google.cloud.bigquery.job.load.LoadJob at 0x7f56c0b03970>"
-      ]
-     },
-     "execution_count": 263,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "job = client.load_table_from_dataframe(\n",
     "    table4, 'Workshop.empleados_departamento', job_config = job_config\n",
     ")\n",
     "job.result()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -707,7 +353,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
